Fixed Loader text align and arrows display

--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -66,6 +66,9 @@ body {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        h3{
+            text-align: center;
+        }
 }
 
 
